# pydigger.rs

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
.github/workflows/: ci.yml
examples/: jinja-1.2.json  pixelcore-0.0.5.json
src/: download.rs  lib.rs  main.rs  report.rs
